--- a/composer.json
+++ b/composer.json
@@ -1,10 +1,9 @@
 {
-	"name": "winc-oops/passport-pkce",
+	"name": "winc-oops/laravel-passport-pkce",
 	"description": "Laravel's Passport PKCE implementation package",
 	"autoload": {
 		"psr-4": {
-			"WincOops\\PassportPkce\\": "src/",
-			"WincOops\\PassportPkce\\Tests\\": "tests/"
+			"WincOops\\LaravelPassportPkce\\": "src/"
 		},
 		"files": [
 			"src/helpers.php"
@@ -12,7 +11,7 @@
 	},
 	"autoload-dev": {
 		"psr-4": {
-			"WincOops\\PassportPkce\\Tests\\": "tests/"
+			"WincOops\\LaravelPassportPkce\\Tests\\": "tests/"
 		}
 	},
 	"authors": [
@@ -30,12 +29,12 @@
 	"extra": {
 		"laravel": {
 			"providers": [
-				"WincOops\\PassportPkce\\Providers\\PassportPkceServiceProvider",
-				"WincOops\\PassportPkce\\Providers\\AuthServiceProvider",
-				"WincOops\\PassportPkce\\Providers\\RouteServiceProvider"
+				"WincOops\\LaravelPassportPkce\\Providers\\PkceServiceProvider",
+				"WincOops\\LaravelPassportPkce\\Providers\\AuthServiceProvider",
+				"WincOops\\LaravelPassportPkce\\Providers\\RouteServiceProvider"
 			],
 			"aliases": {
-				"PassportPkce": "WincOops\\PassportPkce\\Facades\\PassportPkce"
+				"LaravelPassport": "WincOops\\LaravelPassportPkce\\Facades\\LaravelPassport"
 			}
 		}
 	}
