--- a/composer.json
+++ b/composer.json
@@ -29,7 +29,7 @@
 	"extra": {
 		"laravel": {
 			"providers": [
-				"ProxyMurder\\LaravelPassport\\Providers\\PkceServiceProvider",
+				"ProxyMurder\\LaravelPassport\\Providers\\AuthServiceProvider",
 				"ProxyMurder\\LaravelPassport\\Providers\\OAuthServiceProvider",
 				"ProxyMurder\\LaravelPassport\\Providers\\RouteServiceProvider"
 			],
